RESOLVED FIXED13391
REGRESSION (r18819): Incomplete repaint of button text
https://bugs.webkit.org/show_bug.cgi?id=13391
Summary REGRESSION (r18819): Incomplete repaint of button text
mitz
Reported 2007-04-18 06:43:57 PDT
See the attached test case.
Attachments
Test case (208 bytes, text/html)
2007-04-18 06:44 PDT, mitz
no flags
Just ignore lightweight clip in repaint rect computation (39.58 KB, patch)
2007-04-21 08:53 PDT, mitz
darin: review+
mitz
Comment 1 2007-04-18 06:44:30 PDT
Created attachment 14073 [details] Test case
mitz
Comment 2 2007-04-18 06:45:18 PDT
This bug affects the Web Inspector (at least on trunk).
mitz
Comment 3 2007-04-18 07:44:48 PDT
Corrected the revision range of the regression. The later changes merely made the issue visible in the inspector.
mitz
Comment 4 2007-04-18 08:27:34 PDT
This bug is a regression from Safari 2.0.4 since it also affects <button>. The regression was caused by <http://trac.webkit.org/projects/webkit/changeset/18819>. The RenderBox::computeAbsoluteRepaintRect() logic for the hasControlClip() case is very strange - it doesn't look at the container o at all. I think it should intersect with o's controlClipRect(). However, in the case of this bug, the controlClipRect() is invalid since the container is in mid-layout (exactly the same problem discussed in the comments for the hasOverflowClip() case).
mitz
Comment 5 2007-04-21 08:53:02 PDT
Created attachment 14122 [details] Just ignore lightweight clip in repaint rect computation I think it's okay for now to just ignore the clip. Typically the contents don't overflow the control anyway, so this shouldn't cause successive repainting (for popups and listboxes, the contents are completely controlled by the engine).
Darin Adler
Comment 6 2007-04-21 10:15:56 PDT
Comment on attachment 14122 [details] Just ignore lightweight clip in repaint rect computation r=me; seems OK to ignore the clipping when repainting
Sam Weinig
Comment 7 2007-04-21 20:58:55 PDT
Landed in r21002.
Dave Hyatt
Comment 8 2007-04-21 22:11:03 PDT
Please file a followup bug to track the FIXME added to the code.
mitz
Comment 9 2007-04-21 22:50:40 PDT
(In reply to comment #8) > Please file a followup bug to track the FIXME added to the code. > Bug 13443.
Note You need to log in before you can comment on or make changes to this bug.