LayoutTests: 2007-04-21  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=13391
          REGRESSION (r18819): Incomplete repaint of button text

        * fast/repaint/control-clip-expected.checksum: Added.
        * fast/repaint/control-clip-expected.png: Added.
        * fast/repaint/control-clip-expected.txt: Added.
        * fast/repaint/control-clip.html: Added.

WebCore:
2007-04-21  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13391
          REGRESSION (r18819): Incomplete repaint of button text

        Test: fast/repaint/control-clip.html

        Ignore controls' lightweight clip in repaint rect computation for now.

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::computeAbsoluteRepaintRect):



Canonical link: https://commits.webkit.org/17532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21002 268f45cc-cd09-0410-ab3c-d52691b4dbfc